uptade for runnable jar