@@ -1,1 +1,2 @@
 # gestion-stock
+// --module-path "C:\Users\Foxinow\eclipse-workspace\Lib\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
